<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="download_notification_channel_name">Download</string>
    <string name="download_notification_channel_description">Download Channel Description</string>
    <string name="download_notification_channel_id" translatable="false">download_channel_id</string>
    <string name="notification_action_title">Check the status</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="select_file">Please select the file to download</string>
    <string name="button_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="button_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="button_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="label_file_name">File name:</string>
    <string name="label_status">Status:</string>
    <string name="label_button_detail">OK</string>
    <string name="download_status_successful">Successful</string>
    <string name="download_status_failed">Failed</string>
    <string name="download_status_cancelled">Cancelled</string>
    <string name="download_status_pending">Pending</string>
    <string name="download_status_none">None</string>
    <string name="download_status_running">Running</string>
    <string name="download_status_paused">Paused</string>
</resources>
