<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_height"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/spacing_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_assistant_black_24dp" />

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/spacing_normal"
        app:loadingBackgroundColor="@color/colorPrimary"
        app:loadingProgressColor="@color/colorPrimaryDark"
        app:loadingCircleColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image">

        <RadioButton
            android:id="@+id/radio_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:text="@string/button_glide"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/radio_loadapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:text="@string/button_loadapp"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/radio_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_retrofit"
            android:textSize="@dimen/default_text_size" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>